charts/traefik/https-redirect-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-scheme-redirect
  namespace: traefik-system
spec:
  redirectScheme:
    scheme: https
    port: "443"
